added reservation backend pipeline

--- a/quickmeet_api/.htaccess
+++ b/quickmeet_api/.htaccess
@@ -1,8 +1,8 @@
 # Enable the Rewrite Engine
 RewriteEngine On
 
-# Route URLs to booking.php
-RewriteRule ^booking/([a-zA-Z0-9_\-]+)$ booking.php?url=$1 [L,QSA]
+# Route URLs to bookingurl.php
+RewriteRule ^booking/([a-zA-Z0-9_\-]+)$ bookingurl.php?url=$1 [L,QSA]
 
-# Route URLs to reservation.php
-RewriteRule ^reservation/([a-zA-Z0-9_\-]+)$ reservation.php?url=$1 [L,QSA]
+# Route URLs to reservationurl.php
+RewriteRule ^reservation/([a-zA-Z0-9_\-]+)$ reservationurl.php?url=$1 [L,QSA]
