--- a/quickmeet_api/.htaccess
+++ b/quickmeet_api/.htaccess
@@ -1,3 +1,8 @@
+# <Directory "/home/.../public_html">
+#     AllowOverride All
+#     Require all granted
+# </Directory>
+
 # Enable the Rewrite Engine
 RewriteEngine On
 
