authoring for Emilie and code clean up

--- a/quickmeet_api/.htaccess
+++ b/quickmeet_api/.htaccess
@@ -1,3 +1,5 @@
+# @author: Emilie Zhang for url redirection
+
 # <Directory "/home/.../public_html">
 #     AllowOverride All
 #     Require all granted
